src/app/app.module.scss
.background {
  // background: #d29cff;
  // background: -webkit-linear-gradient(90deg, rgba(210, 156, 255, 1) 0%, rgba(176, 23, 150, 1) 100%);
  // background: -moz-linear-gradient(90deg, rgba(210, 156, 255, 1) 0%, rgba(176, 23, 150, 1) 100%);
  // background: linear-gradient(90deg, rgba(210, 156, 255, 1) 0%, rgba(176, 23, 150, 1) 100%);
  // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#D29CFF", endColorstr="#B01796", GradientType=1);

  background-image: radial-gradient(circle, #540000, #67001a, #760033, #800051, #810074);

  width: 100vw;
  height: 100vh;

  display: flex;
  justify-content: center;
  align-items: center;
}

.card {
  z-index: 100;
  position: relative;

  background-image: radial-gradient(
    circle,
    #ff95d1,
    #fe96d9,
    #fb98e2,
    #f89aea,
    #f49cf3,
    #f099f0,
    #eb97ee,
    #e794eb,
    #e28bdc,
    #dc82cd,
    #d57abf,
    #ce72b1
  );

  width: 300px;
  height: 300px;
  max-width: 90%;
  border-radius: 40px;

  box-shadow: 2px 1px 62px 44px #ce72b1;
  -webkit-box-shadow: 2px 1px 62px 44px #ce72b1;
  -moz-box-shadow: 2px 1px 62px 44px #ce72b1;
}

.iconsList {
  display: flex;
  justify-content: center;
  margin-top: 15px;
  gap: 15px;
}

.title {
  text-align: center;
  font-weight: 600;
  font-size: 24px;
  color: #540000;
  margin-top: 30px;
  margin-bottom: 30px;
}

.buttonsContainer {
  position: relative;
  height: 100%;
}

.button {
  background-color: #8a0000;
  color: #fff;
  padding: 12px 17px;
  border-radius: 7px;
  font-size: 30px;
}

.buttonNo {
  position: absolute;
  left: 15%;
}

.winMessage {
  font-size: 40px;
  text-align: center;
  color: #810074;
}

.video {
  width: 200px;
  height: 200px;
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-40%);
  background: transparent !important; /* на всяк випадок */
  mix-blend-mode: normal;
}

